# nd2tools

./: LICENSE  README.md  environment.linux.lock.yml  environment.osx.lock.yml  environment.yml  install-miniconda.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yaml  ci_macos.yml
doc/: knowledge.md
misc/: condalock.sh
src/nd2tools/: __init__.py  __main__.py  _version.py  cv2_utils.py  utils.py
src/nd2tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nd2tools/cli/: crop.py  cropper.py  display.py  extract.py  image.py  movie.py  scalebar.py  split.py
tests/: test_cli.py
