[metadata]
name = nd2tools
author = Tobias Frick
url =
description = Nd2 image handling package
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires >= 3.8,
install_requires =
    dnaio
    tqdm
    importlib_resources
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nd2tools = nd2tools.__main__:main

[options.extras_require]
dev = flake8

[flake8]
max-line-length = 88
